updated at: 2023-07-31 18:18, オリジナル3Dモデル「phono」 - うさみみ雑貨店 - BOOTH

--- a/VRChat/30/1184930.html
+++ b/VRChat/30/1184930.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tKhPDVTfZBjkoNZTtXeTYD2QtEbnRpplK0W9FRR6R7o="></script>
+    "cZsFkE1KeBli1yUAlnDfgDHgWPH1vGTYDZ/uJW6tVcc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「phono」","description":"なんかケーブルとか繋がってる子です。\nVRChatのアバターの他、動画・ゲーム等の作成に利用することができます。\nフルトラッキング対応です。\n\n3Dモデル「phono」\n\n2019/01/18 ver1.0\n------------------------------------------------------------------------------\n\nフォルダ内容一覧\nphono.blend\nphono.fbx\nphono.unitypackage\nphono.png\nmetallic.png\nnormal.png\nphono.psd\nReadme_ja.txt\nReadme_en.txt\nTermOfUse_ja.txt\nTermOfUse_en.txt\n\n------------------------------------------------------------------------------\n\n・Unitypackageの動作環境はUnity 2017.4.15f1、VRCSDKはVRCSDK-2018.12.19.17.03_Publicで動作を確認しております。\n・Unitypackageのインポートの際、先にVRCSDKをインポートしておく必要があります。\n・フルトラッキング対応です。\n・Unitypackageにはみに(https://twitter.com/Mini_9321_VR)様の「まんまるシェーダーver1.4」の一部を同梱しています。\n\n------------------------------------------------------------------------------\n3Dモデル「phono」利用規約\n\n2018/01/18 ver1.0\n------------------------------------------------------------------------------\n\n本モデルを使用した時点で本利用規約に同意したものとします。\n\n------------------------------------------------------------------------------\n・利用について\nVRChatのアバターとしての使用の他、動画配信、ゲーム・アニメーション・イラスト等の製作に営利・非営利を問わず利用することができます。\n\n・改変について\nモデルデータ及びテクスチャデータの改変は自由に行うことができます。\n\n・R-18・R-18Gへの利用について\n特に規制はありません。\n\n・禁止事項\n配布データについては改変の有無を問わず再配布を禁止します。\nまた特定個人・団体への中傷を目的とした利用を禁止します。\n\n・著作権について\n配布データ及び改変データの著作権は配布データの製作者 みきしぃ に帰属するものとします。\n配布データを利用した著作物の公開は自由に行うことができます。\n\n・免責事項\n配布データを用いたことによるいかなる損害についても製作者 みきしぃ は一切の責任を負わないものとします。\nこの利用規約は予告なく変更される場合があります。ご了承ください。\n\n------------------------------------------------------------------------------\n\n不明点・質問等ありましたら以下にご連絡ください。\nTwitter: @3405691582\nMail: m.myxomatosis@gmail.com\n","url":"https://booth.pm/ja/items/1184930","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1184930/eb6282d6-a45a-4aae-8a59-764871e37e47_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tKhPDVTfZBjkoNZTtXeTYD2QtEbnRpplK0W9FRR6R7o="></script>
+    nonce="cZsFkE1KeBli1yUAlnDfgDHgWPH1vGTYDZ/uJW6tVcc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
@@ -593,7 +594,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
