--- a/VRChat/98/1177298.html
+++ b/VRChat/98/1177298.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TCx+lKvgBVBBvnqthmoTmVEvaYZ+Rm1RHAjG9BeblfY="></script>
+    "ZZ4NdindvWGEq/+9GYmblcn3iy0fGD4ShDE9IDeB3/c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]ウェリントン眼鏡(花)","description":"ツル部分をかわいい感じに作りました。\n目幅調整＆ツルボーンで誰でもジャストフィット(のはずです)\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx + png\n　ポリゴン数：△2856 (本体2800 + アクセ56)\n　その他：ボーンあり(つる左右)\n　　　　　つるの長さ調節可能\n　　　　　アクセサリー取り外し可能\n　　　　　DynamicBoneでアクセが揺れます\n　　　　　目幅調整機能付き\n　テクスチャ：あり(全6色)\n　シェーダー：UTS2　(事前にインストール願います)\n\n使い方\n　事前に以下をインポート\n　・UTS2.0.x\n　・DynamicBone(任意)\n　prefabフォルダ内のflower_x.prefabをHierarchyにドロップ\n\n調整方法\n　添付画像(調整方法.png)を参照\n\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n","url":"https://booth.pm/ja/items/1177298","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1177298/df8288ef-a104-4494-8550-64fa3e4c0fea_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TCx+lKvgBVBBvnqthmoTmVEvaYZ+Rm1RHAjG9BeblfY="></script>
+    nonce="ZZ4NdindvWGEq/+9GYmblcn3iy0fGD4ShDE9IDeB3/c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
