updated at: 2023-07-31 18:26, 【3Dモデル】ひるね屋 - へアセットVer.1 - ひるね屋 - BOOTH

--- a/VRChat/47/1174147.html
+++ b/VRChat/47/1174147.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9slXVhAyKCfGWY18POZuEVZb0FmC+JVh8gTZJsemnuI="></script>
+    "2Iem+jEeDk4fAyhXLpVc3f+7959yns8LcDjn2B+FNVI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】ひるね屋 - へアセットVer.1","description":"●モデル説明\n【3Dモデル】ひるね屋 - へアセットVer.1\n制作者：ひるね\n\nマテリアル数：1個\nポリゴン数\nTypeA △8641\nTypeB △9303\nTypeC △7429\n\nVRChatでの利用を想定したヘアセットモデルです\nむた様制作の3Dモデル「キッシュ」(https://booth.pm/ja/items/954376)\nの頭部に合うように制作してありますので、キッシュちゃんと組み合わせる場合は調整なしで利用できます\n\n※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします\n\n\n●内容物\n\n・FBXファイル（6種）\nTypeA,B,Cの右目隠れと左目隠れの6種\n\n・Texファイル（png14種、psd1種）\n\n・Hirune Hairset Ver.1.unitypackeage\n上記のデータを同梱したunitypackeageです\nダイナミックボーンの数値、マテリアル（MnMrShader1_3）など設定済みのPrefabを同梱してあります\n※インポートする前にダイナミックボーンアセット、MnMrShader1_3をインポートしないと設定が反映されません\n\n・Readme.txt\n利用規約のテキストです\n下部にも同じ内容の利用規約文を記載しているので、必ず目を通してから購入をお願いします","url":"https://booth.pm/ja/items/1174147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1174147/1b91f35a-2c5a-4dca-8775-edc1a5dfbda8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9slXVhAyKCfGWY18POZuEVZb0FmC+JVh8gTZJsemnuI="></script>
+    nonce="2Iem+jEeDk4fAyhXLpVc3f+7959yns8LcDjn2B+FNVI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -509,9 +509,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
