updated at: 2023-07-31 18:27, シザーバッグ（VRChat想定） - ２倍製作所 - BOOTH

--- a/VRChat/76/1376476.html
+++ b/VRChat/76/1376476.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RjhnQ8cPKjQNwuSNH5GO1wqcVnLr9vxlflC8W6EYHDs="></script>
+    "4H8hRz7/CF27FfU7NhuccqfV/71/9ErQCNHgx6ESiBs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シザーバッグ（VRChat想定）","description":"革製のシザーバッグです。\n※蓋は開きません。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・Porch1.fbx（FBXファイル）\n・Porch1.fbx（メタデータ）\n・Porch-BlueLeather.png（青色テクスチャ）\n・Porch-BlueLeather.png.meta（メタデータ）\n・Porch-BrownLeather.png（茶色テクスチャ）\n・Porch-BrownLeather.png.meta（メタデータ）\n・Porch-RedLeather.png（赤色テクスチャ）\n・Porch-RedLeather.png.meta（メタデータ）\n・シザーバッグ.prefab\n・シザーバッグ.prefab.meta（メタデータ）\n・バッグ本体マテリアル.mat\n・バッグ本体マテリアル.mat.meta（メタデータ）\n・金具.mat（マテリアルファイル）\n・金具.mat.meta（メタデータ）\n\n使用方法\n全ファイルをUnityに読み込み、シザーバッグ.prefabを使用してください。\nシザーバッグ本体のInspectorのSkinned Mesh Renderer内、BlendShapesの縦と横の値を増やすとベルトが出てきます。\nバッグ本体マテリアルのAlbedoの左にある□にテクスチャをドラッグアンドドロップで入れると、入れたテクスチャの色に変わります。\nカラーフィルター等で全体の色を変えればカスタマイズ可能です。\n標準で3つの色を同梱しています。（茶色・赤・青）\n金具の色は金具.matのAlbedの色で変更可能です。\nボーンが入っているので、かばん角度調整の角度を変更すると、かばんの角度が変えられます。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1376476","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1376476/b1a4b4bc-4478-49a4-b87b-b626c7dec04d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RjhnQ8cPKjQNwuSNH5GO1wqcVnLr9vxlflC8W6EYHDs="></script>
+    nonce="4H8hRz7/CF27FfU7NhuccqfV/71/9ErQCNHgx6ESiBs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      235
+                                      237
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      235
+                                      237
                                     </div>
                                   </div></a>
                                 </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
