updated at: 2023-07-31 18:28, ますきゃっと重装装備セット【VRchat向け3Dモデル】 - 多脚戦車Aの開発工房 - BOOTH

--- a/VRChat/90/1375790.html
+++ b/VRChat/90/1375790.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6TgKHUKntTXcRrCcsYaYC9MsubfdQS8RecGNKDgIHZM="></script>
+    "F1uoVm8nZae7gqvQC8TOzR63FwuoeTCjDhGdXvKtCi0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ますきゃっと重装装備セット【VRchat向け3Dモデル】","description":"総△10.119\n\n---------------------------\n利用規約\n\n本モデルを利用・配信などいずれかの形で使用した時点で本利用規約に同意したものとします。 \n\n・改変、テクスチャの描き変え自由です。\n\n・本モデルを利用した動画配信等での使用は許可します。\n\n・本モデルを利用したゲーム、アニメーション制作は可能です。\n\n・本モデル・素材の改変後問わず、再配布は禁止します。\n\n・本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n・本モデルは追加・修正等アップデートされることがあります。\n---------------------------\n\n\n【内容物】\n各モデルFBX/PSD/PNG/unitypachage\n\n・バイザー付きヘルメット\n\n・バックパック付属胸部装甲\n\n・両サイド装甲スカート\n\n・増槽付き後部装甲スカート\n\n・個人携行型対物砲\n\n・ビームソード内蔵大型シールド\n\n---------------------------\n\nヘルメットバイザー、シールド内蔵型大型ビームソードはシェイプキーで可動します。\nビームソードには別マテリアルが割り当てられているので、お好きなシェーダーをお使いください。\nエミッション用マスク、psd、テクスチャ付属です。\n\n\n追記\nロングセラーなのでunitypackageを今更ながら追加いたしました。\nなるべく新しいarktoonの事前導入をおすすめいたします。\n\n【画像のますきゃっとは付属しません】\n\n量産型のらきゃっと向けの第三次世界大戦時、もし先行量産型に正式装備があったらな・・・という想定のもとデザインしました。\n基地の制圧、孤立した友軍の救助、様々なシチュエーションにて使用できます。\n\nますきゃっと向け装備になります。\n他アバターでの使用は自己責任でお願いします。\n\n----------------------------\n2019/05/20 テクスチャを数点追加・加筆修正しました。\n2019/10/26 arktoonShader向けのマテリアルを適用したunitypachageを追加しました。\n改変のし易い白テクスチャのモデルも設定済みに登録。","url":"https://booth.pm/ja/items/1375790","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/180f3fea-2650-4a34-bbcc-621c10df3a3a/i/1375790/94441cb6-de8c-44c9-9558-f1fa6d0154b2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6TgKHUKntTXcRrCcsYaYC9MsubfdQS8RecGNKDgIHZM="></script>
+    nonce="F1uoVm8nZae7gqvQC8TOzR63FwuoeTCjDhGdXvKtCi0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -577,9 +577,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
