updated at: 2023-07-31 18:31, IMR-616 A2E3 AZENIS 2 Export Edition - Alambartel Garage Shop - BOOTH

--- a/VRChat/67/1172467.html
+++ b/VRChat/67/1172467.html
@@ -107,7 +107,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LTRlIWL+2VDFsRZNnVeSz0y6jFc46AhOrzYFpKNftrU="></script>
+    "8CTRuc1YxaF9yijilBA0BA1lEzFmjgK6DsdPkJs3hUo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"IMR-616 A2E3 AZENIS 2 Export Edition","description":"この度はIMR-616 AZENIS2 A2E3exporteditionをご覧いただき誠にありがとうございます。\n\n・はじめに\n当製品は当社のIMR-616 AZENIS2 A2E3をベースに輸出用に各部の変更を施したモデルとなります。\nぜひともお客様の手でオリジナリティを出してご使用いただければ嬉しく思います。（基本的に改変推奨モデルです。無改変でも使用は可能ですができるだけ改変してのご利用をお願いします。）\n\n・ご使用に際してのルール\n1.著作権は作者であるRocket-Lapinに帰属します。放棄はしませんのでご注意ください。(改変されても大元の権利はRocket-Lapinに帰属します。)\n\n2.以下のような使用は禁止します。\n　　・公序良俗に反する利用\n　　・政治的、宗教的主張に関する利用\n　　・再配布、再販売は禁止(VRCなどのように購入者本人が使用するためにアップロードが必要な場合は、本人が使用する場合に限り許可します。\n　　　アバターペデスタルなどで本人以外の方が利用できる状態にすることは禁止させていただきます。)\n　　・自作発言はしないでね♡(ご自身で改変された箇所に関しての自前加工発言、自慢はしてもらって大丈夫です。むしろその技術がすごいのです、\n　　　どんどん広めましょう！)\n　　・無改変でのVTuber活動（改変後でも活動を希望される場合はご連絡ください。）\n\n3.やってもいいこと。\n　　・テクスチャ改変、モデル改変、営業目的での利用、収益化目的の動画の主催、参加、映り込みOK。\n　　　その時は教えてね！見に行くよ！（VTuber活動をされる際は改変をお願いします！)\n\n4.やってほしいこと（重要！）\n　　・根本的に社長が気まぐれで自分の改変が見てみたい！と、唐突に販売を決定したモデルですので、とにかく改変してください。\n　　　改変すればするほど社長が喜びます。\n\n5.免責事項\n　　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属する\n　　　いかなる団体も、一切の責任を負わないものとします。\n　　・作者のRoket-Lapinは、イムラインダストリー製もタケノコ公国製も大好きです。皆様もぜひ応援しましょう。\n　　・現在フルトラッキングに対応の確認はできておりません。申し訳ありませんが通常のVRモードまででの使用、または自己責任でのフルトラッキング利用\n　　　をお願いいたします。\n\n　　　　以上、取扱説明書でした。\n\n　　　不明な点、質問、問い合わせなどありましたら@RocketLapinまたはrocketlapin@gmail.comまで連絡ください。\n\n      初期シェーダーはstsndardで輸出しておりますが、社長のモデルではArktoonshaderを使用、ヘッドセットガラス部分はMK_glass shaderを使用しています。\n　　　参考までに。\n　　　なんかいっぱいテクスチャがありますが、それぞれ適用可能な際に使用してください。また、初期状態であれば直接聞いていただければ説明いたします。\n　　　申し訳ありませんが改変後のモデル、テクスチャに関してはお答えできかねますのでご了承ください。\n\n　　　今気が付きましたが、イムラインダストリーとIMRindustryは別部署です。一切関係ございませんのでご注意ください。\n\n2019.01.11-\n   unitypackadgeないのプレハブの内容を正しいものに置き換え、アップロードしやすくし、Arktoon shaderを同梱しました。（適応は手動で行う必要があります）\n2019.03.11\n　改変に便利なメッシュ分割済みFBXを同梱しました。","url":"https://booth.pm/ja/items/1172467","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/4a2068d0-e3b2-4bfe-af45-d14222c245e6/i/1172467/1f589eb6-0382-4c3c-9f93-9332f0d49299_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LTRlIWL+2VDFsRZNnVeSz0y6jFc46AhOrzYFpKNftrU="></script>
+    nonce="8CTRuc1YxaF9yijilBA0BA1lEzFmjgK6DsdPkJs3hUo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -486,9 +486,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
