updated at: 2023-07-31 18:32, 【3Dモデル】茶色い帽子△968 - 叶珈琲 - BOOTH

--- a/VRChat/46/1171246.html
+++ b/VRChat/46/1171246.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uJIO/OJ/wD/oxepNJ0YXvmPb/U9H/49vAjUPqrtjlMI="></script>
+    "JaKJJf3LJ4QGcrLLyI88u9mMGPeGseJwkemjb1h9Bnc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】茶色い帽子△968","description":"VRChatでの使用を想定した茶色い帽子の3Dモデルです。\n以下のファイルが入っています。\n\n・hat.fbx … FBX形式の3Dモデル\n・Textures/hat.png … 3Dモデルで使用しているテクスチャ\n・BrownHat.unitypackage … 3Dモデルを含むUnityパッケージ\n\n\n著作権フリーです。\nCC0 パブリック・ドメイン提供\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja","url":"https://booth.pm/ja/items/1171246","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a686316-94b9-4b02-8f55-b546b6d93df5/i/1171246/36c2a8f2-6d90-4c8d-a632-ced645d23d6f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uJIO/OJ/wD/oxepNJ0YXvmPb/U9H/49vAjUPqrtjlMI="></script>
+    nonce="JaKJJf3LJ4QGcrLLyI88u9mMGPeGseJwkemjb1h9Bnc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -459,9 +459,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
