updated at: 2023-07-31 18:35, Tuya&#39;s Fragment Act1 &quot;Device&quot; - T2FACTORY - BOOTH

--- a/VRChat/41/1167741.html
+++ b/VRChat/41/1167741.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EshV/S002jRGWmJUHZxLb+Jjs/jF376wiSd3biSkNg0="></script>
+    "5RbycczugTgkYhQcXKMHD5f4lymXw+g8CukdL3AGBXs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Tuya's Fragment Act1 \"Device\"","description":"つよつやふぁくとりーの武器シリーズ「Tuya's Fragment」の第一作目。某魔法少女の武器に影響を受け，\"Device\"の名が冠されている。\n　中央のクリスタルをエネルギー源とし，刃が杖，斧，短剣，両刃剣，と様々な形に変形する可変武器。\n\nTuya's Fragmentとは\n勇希トウヤ，つやなが日頃妄想していたオリジナル武器を形にしたもの。\n影響されるアニメや,ゲーム作品がたくさんあるため,武器ごとにその作品をイメージした名前をつけている。\n　\n","url":"https://booth.pm/ja/items/1167741","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/bfb30d94-9b1e-42d7-be8f-0f140a2c865a/i/1167741/221cf428-5ea1-4d61-904f-ca1fa77d1d36_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EshV/S002jRGWmJUHZxLb+Jjs/jF376wiSd3biSkNg0="></script>
+    nonce="5RbycczugTgkYhQcXKMHD5f4lymXw+g8CukdL3AGBXs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -423,9 +423,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
