updated at: 2023-07-31 18:35, [無料版あり]SDキャラ3Dモデル素体 - sasaminbooth - BOOTH

--- a/VRChat/31/1166731.html
+++ b/VRChat/31/1166731.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1rAKIUsv7toMZrrm4W+quBtJ2n+WEA3quP23UAzXo18="></script>
+    "WXjtPaUJkhXdXU2R746USXD6PrNoLAxe0VIC1U2IJjE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料版あり]SDキャラ3Dモデル素体","description":"■モデル説明\n　本商品は３Dモデルの素体です。\n\n　仮ボーン・ウェイト設置済みです。\n　素体に加え、デフォルトの目・髪を同梱しています。\n　Blenderファイルの場合、ミラー・細分化曲面モディファイヤが適用前の状態で入ってます。FBXファイルはモディファイア適用前・適用済みの2種類入っています。\n\n　VRChat内でクローンできる設定のパブリックアバターとしての利用ができます。\n\n","url":"https://booth.pm/ja/items/1166731","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1166731/12e8d4fb-a26b-4e2e-8b26-9e465bc4f392_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1rAKIUsv7toMZrrm4W+quBtJ2n+WEA3quP23UAzXo18="></script>
+    nonce="WXjtPaUJkhXdXU2R746USXD6PrNoLAxe0VIC1U2IJjE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -490,9 +490,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
